--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -14,11 +14,11 @@ body:
       label: "Please confirm these before moving forward"
       description: "Please confirm the following before posting your issue."
       options:
-        - label: "I have searched for my issue and have not found a work-in-progress/duplicate/resolved issue."
+        - label: "I have searched for my issue and have not found a similiar in the Open or Closed issues."
           required: true
         - label: "I have tested that this issue has not been fixed in the latest (beta or stable) release."
           required: true
-        - label: "I have checked the FAQ section for solutions."
+        - label: "I have checked the Discussions section for solutions."
           required: true
         - label: "This issue is about a bug (if it is not, please use the correct template)."
           required: true
@@ -85,7 +85,7 @@ body:
     id: logs
     attributes:
       label: "Screenshots or Logs (if applicable)"
-      description: "If possible, add screenshots or logs to help explain your issue. Logs can be found in: `%temp%` (Windows temporary folder)"
+      description: "If possible, add screenshots or logs to help explain your issue. Logs can be found in: `%localappdata%\Winhance\Logs`"
       placeholder: "Paste screenshots or logs here"
     validations:
       required: false
