--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -85,7 +85,7 @@ body:
     id: logs
     attributes:
       label: "Screenshots or Logs (if applicable)"
-      description: "If possible, add screenshots or logs to help explain your issue. Logs can be found in: `%localappdata%\Winhance\Logs`"
+      description: "If possible, add screenshots or logs to help explain your issue. Logs can be found in: '%localappdata%/Winhance/Logs'"
       placeholder: "Paste screenshots or logs here"
     validations:
       required: false
