--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,15 @@
 extras/prerequisites/
 installer-output/
 .config/
+# Claude folder
+.claude/
+# Gemini stuff
+GEMINI.md
+.gemini/
+# Plans
+.plans/
+# Custom Prompts
+.prompts/
 
 # User-specific files
 *.rsuser
@@ -231,13 +240,3 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
-
-# Claude folder
-.claude/
-
-# Gemini stuff
-GEMINI.md
-.gemini/
-
-# Plans
-.plans/
