--- a/src/Winhance.UI/Winhance.UI.csproj
+++ b/src/Winhance.UI/Winhance.UI.csproj
@@ -28,10 +28,10 @@
     <DefineConstants>DISABLE_XAML_GENERATED_MAIN</DefineConstants>
     <StartupObject>Winhance.UI.Program</StartupObject>
     <!-- Version information -->
-    <Version>25.01.26</Version>
-    <FileVersion>25.01.26</FileVersion>
-    <AssemblyVersion>25.01.26</AssemblyVersion>
-    <InformationalVersion>v25.01.26</InformationalVersion>
+    <Version>26.02.08</Version>
+    <FileVersion>26.02.08</FileVersion>
+    <AssemblyVersion>26.02.08</AssemblyVersion>
+    <InformationalVersion>v26.02.08</InformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -97,6 +97,9 @@
     <EmbeddedResource Include="Features\Common\Resources\AdvancedTools\autounattend-template.xml">
       <LogicalName>Winhance.UI.Resources.AdvancedTools.autounattend-template.xml</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="Features\Common\Resources\Configs\Winhance_Windows_Defaults_Config.winhance">
+      <LogicalName>Winhance.UI.Resources.Configs.Winhance_Windows_Defaults_Config.winhance</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
 
   <!-- CsWin32 NativeMethods.txt for P/Invoke generation -->
@@ -104,3 +107,5 @@
     <AdditionalFiles Include="NativeMethods.txt" />
   </ItemGroup>
 </Project>
+
+
