Replace WinGet COM install/uninstall with bundled CLI and add source targeting
Bundle standalone winget.exe (v1.12.470) for CLI-based install/uninstall
while keeping COM API for fast detection. Add MsStoreId property to
ItemDefinition to separate Store IDs from winget repo IDs, and pass
--source msstore/winget to target the correct source directly.

- Add WinGetCliRunner, WinGetExitCodes, WinGetProgressParser utilities
- Add extras/Update-BundledWinGet.ps1 for fetching CLI binaries
- Rewrite WinGetService install/uninstall from COM to CLI
- Add CLI fallback for detection (winget export) and installer type (winget show)
- Resolution order: system winget (primary) -> bundled CLI (fallback)
- Add startup internet check; skip update/install silently when offline
- Rewrite WinGetInstaller with bundled CLI as fastest install path
- Move all Store IDs from WinGetPackageId to MsStoreId across definitions
- Update all callers to pass correct --source flag
- Add post-uninstall verification polling for interactive uninstallers
- Clean up log noise: only log phase transitions, not progress bars
- Add detection summary logging with per-method breakdown
- Translate bundled winget resource keys to human-readable progress output
- Update WimUtilService to prefer system winget for ADK install
- Update THIRD-PARTY-NOTICES.txt and all 25 localization files

--- a/src/Winhance.Infrastructure/Winhance.Infrastructure.csproj
+++ b/src/Winhance.Infrastructure/Winhance.Infrastructure.csproj
@@ -27,4 +27,11 @@
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 
     </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Features\SoftwareApps\Services\WinGet\winget-cli\**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>winget-cli\%(RecursiveDir)%(Filename)%(Extension)</Link>
+    </None>
+  </ItemGroup>
 </Project>
