--- a/src/Winhance.UI/Winhance.UI.csproj
+++ b/src/Winhance.UI/Winhance.UI.csproj
@@ -14,8 +14,8 @@
     <UseWinUI>true</UseWinUI>
     <!-- Unpackaged deployment (no MSIX) -->
     <WindowsPackageType>None</WindowsPackageType>
-    <!-- Note: SelfContained=false for CLI builds; set to true for release builds in VS -->
-    <WindowsAppSDKSelfContained>false</WindowsAppSDKSelfContained>
+    <!-- Self-contained: bundles App SDK runtime with the app (no separate runtime install needed) -->
+    <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
     <EnableMsixTooling>false</EnableMsixTooling>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -28,10 +28,10 @@
     <DefineConstants>DISABLE_XAML_GENERATED_MAIN</DefineConstants>
     <StartupObject>Winhance.UI.Program</StartupObject>
     <!-- Version information -->
-    <Version>26.02.13</Version>
-    <FileVersion>26.02.13</FileVersion>
-    <AssemblyVersion>26.02.13</AssemblyVersion>
-    <InformationalVersion>v26.02.13</InformationalVersion>
+    <Version>26.02.16-beta</Version>
+    <FileVersion>26.02.16</FileVersion>
+    <AssemblyVersion>26.02.16</AssemblyVersion>
+    <InformationalVersion>v26.02.16-beta</InformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -110,6 +110,8 @@
     <AdditionalFiles Include="NativeMethods.txt" />
   </ItemGroup>
 </Project>
+
+
 
 
 
