--- a/src/Winhance.UI/Winhance.UI.csproj
+++ b/src/Winhance.UI/Winhance.UI.csproj
@@ -28,10 +28,10 @@
     <DefineConstants>DISABLE_XAML_GENERATED_MAIN</DefineConstants>
     <StartupObject>Winhance.UI.Program</StartupObject>
     <!-- Version information -->
-    <Version>26.02.16-beta</Version>
+    <Version>26.02.17</Version>
     <FileVersion>26.02.16</FileVersion>
     <AssemblyVersion>26.02.16</AssemblyVersion>
-    <InformationalVersion>v26.02.16-beta</InformationalVersion>
+    <InformationalVersion>v26.02.17</InformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
