Fix Build Warnings

--- a/src/WindowsPackageManager.Interop/WindowsPackageManager.Interop.csproj
+++ b/src/WindowsPackageManager.Interop/WindowsPackageManager.Interop.csproj
@@ -8,6 +8,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <NoWarn>CS0618;CS9191</NoWarn>
   </PropertyGroup>
 
   <!--
