feat: Migrate [ObservableProperty] fields to partial properties (MVVMTK0045)
Migrate all 146 [ObservableProperty] fields across 14 ViewModels from field-based to partial property syntax, eliminating all MVVMTK0045 warnings. Add <LangVersion>preview</LangVersion> to Winhance.UI.csproj for CommunityToolkit.Mvvm 8.4.0 source generator compatibility on .NET 10. Refactor IsAllSelected in WindowsAppsViewModel and ExternalAppsViewModel from dual-purpose [ObservableProperty] to read-only computed properties with [RelayCommand] ToggleSelectAll, removing #pragma suppressions and updating XAML bindings to OneWay + Command. Fix pre-existing WMC1506 warnings in search suggestion DataTemplates by using OneTime binding mode.

--- a/src/Winhance.UI/Winhance.UI.csproj
+++ b/src/Winhance.UI/Winhance.UI.csproj
@@ -19,6 +19,8 @@
     <EnableMsixTooling>false</EnableMsixTooling>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <!-- Required for CommunityToolkit.Mvvm 8.4.0 partial property source generators on .NET 10 -->
+    <LangVersion>preview</LangVersion>
     <!-- MRT/PRI generation - requires Visual Studio MSBuild -->
     <GenerateAppxPackageOnBuild>false</GenerateAppxPackageOnBuild>
     <AppxPackage>false</AppxPackage>
