Sign and rename uninstaller to fix Defender ASR false positive (#479)
- Add CurStepChanged to rename unins000.exe to Winhance.Uninstaller.exe
  post-install, updating registry UninstallString for both admin/user mode
- Add SignedUninstaller support to build script via temp batch file wrapper
- Add VersionInfoCopyright to installer and Copyright to csproj

--- a/src/Winhance.UI/Winhance.UI.csproj
+++ b/src/Winhance.UI/Winhance.UI.csproj
@@ -34,6 +34,7 @@
     <FileVersion>26.02.20</FileVersion>
     <AssemblyVersion>26.02.20</AssemblyVersion>
     <InformationalVersion>v26.02.20</InformationalVersion>
+    <Copyright>Copyright © Marco du Plessis</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
