--- a/src/Winhance.Core/Winhance.Core.csproj
+++ b/src/Winhance.Core/Winhance.Core.csproj
@@ -5,6 +5,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <InternalsVisibleTo Include="Winhance.Core.Tests" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
     <PackageReference Include="System.Text.Json" Version="9.0.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
@@ -15,6 +18,6 @@
     <PackageReference Include="System.IO.Packaging" Version="8.0.1" />
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="8.0.10"/>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2"/>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+
   </ItemGroup>
 </Project>
